@@ -23,7 +23,7 @@ Markers you can use:
 ###ROOM###
 ###BIRTHDAY###
 ###ORGANIZATION###
-###COMPANY### (only here for bacwards compatibility, this is an alias for ORGANIZATION)
+###COMPANY### (only here for backwards compatibility, this is an alias for ORGANIZATION)
 ###CITY###
 ###ZIP###
 ###REGION###
